--- a/public/index.html
+++ b/public/index.html
@@ -1,3 +1,14 @@
 <!doctype html>
 <html lang="en">
-  <div>yo</div>
+  <head>
+    <style>
+      body {
+        background-color: #222222;
+        color: #ffffff;
+      }
+    </style>
+  </head>
+  <body>  
+    <img src="logo.png">
+  </body>
+</html>
