--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,24 @@
   <head>
     <style>
       body {
-        background-color: #222222;
+        background-color: #0a0a0a;
         color: #ffffff;
+        display: block;
+      }
+      #home {
+        padding: 50px;
+        margin-right: auto;
+        margin-left: auto;
       }
     </style>
   </head>
   <body>  
-    <img src="logo.png">
+    <div id="home">
+      <ul> 
+        <li>
+          <span>2021 Jul 7 - </span><a>Tally, a habit tracker</a>
+        </li>
+      </ul>
+    </div>
   </body>
 </html>
