satisfied with home

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,14 @@
   </p>  
   <ul>
     
-<li><span class="date">2022-05-07 00:00:00</span><span class="title">Hello world! (first post)</span><span class="description">TO be or not to be</span></li>
+<li><span class="date">2022 May 07 - </span><a href="./logo">Hello world! (first post)</a><span class="description">,TO be or not to be</span></li>
+<li><span class="date">2022 May 07 - </span><a href="./logo">Hello world! (first post)</a><span class="description">,TO be or not to be</span></li>
+<li><span class="date">2022 May 07 - </span><a href="./logo">Hello world! (first post)</a><span class="description">,TO be or not to be</span></li>
+<li><span class="date">2022 May 07 - </span><a href="./logo">Hello world! (first post)</a><span class="description">,TO be or not to be</span></li>
+<li><span class="date">2022 May 07 - </span><a href="./logo">Hello world! (first post)</a><span class="description">,TO be or not to be</span></li>
+<li><span class="date">2022 May 07 - </span><a href="./logo">Hello world! (first post)</a><span class="description">,TO be or not to be</span></li>
+<li><span class="date">2022 May 07 - </span><a href="./logo">Hello world! (first post)</a><span class="description">,TO be or not to be</span></li>
+<li><span class="date">2022 May 07 - </span><a href="./logo">Hello world! (first post)</a><span class="description">,TO be or not to be</span></li>
 
   </ul>
 </body>
