--- a/public/gallery/index.html
+++ b/public/gallery/index.html
@@ -1,7 +1,7 @@
 
 <head>
     <title>Portfolio</title>
-    <link rel="stylesheet" href="styles1.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     
