--- a/logo.html
+++ b/logo.html
@@ -1,3 +1,13 @@
+<h2>Hello world!</h2>
+
+
+<pre>
+    <code>
+        print('hello world!')
+    </code>
+</pre>
+
+
 <blockquote>
     <p>
         Hello world!
@@ -7,4 +17,18 @@
 
 <p>
     I am currently testing my build.py file, let's hope that this works!
+</p>
+
+
+
+
+<picture>
+    <img src=logo.png>
+</picture>
+
+
+<p>
+    <code>hello world</code>, 
+<a href="google.com">nice link</a>
+
 </p>
