ready to test publish

--- a/public/gallery/index.html
+++ b/public/gallery/index.html
@@ -7,14 +7,46 @@
     
 <div class="piece">
     <picture>
-        <img class="art" src="public/logo/logo.png">
+        <img class="art" src="public/logo/asone.png">
     </picture>
     <div class="didactic">
         <h3 class="title">
-            Hello world! (first post)
+            AsOne
         </h3>
         <p class="description">
-            TO be or not to be
+            a massively collaborative research platform
+        </p>
+    <!-- <div class="brush"><div> -->
+    </div>
+</div>
+
+
+<div class="piece">
+    <picture>
+        <img class="art" src="public/logo/tally.png">
+    </picture>
+    <div class="didactic">
+        <h3 class="title">
+            Tally
+        </h3>
+        <p class="description">
+            a habit tracker
+        </p>
+    <!-- <div class="brush"><div> -->
+    </div>
+</div>
+
+
+<div class="piece">
+    <picture>
+        <img class="art" src="public/logo/hachi.png">
+    </picture>
+    <div class="didactic">
+        <h3 class="title">
+            Hachi
+        </h3>
+        <p class="description">
+            a dna data storage simulation
         </p>
     <!-- <div class="brush"><div> -->
     </div>
