--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,18 @@
 
 <head>
   <title>smh.bio</title>
-  <link rel="stylesheet" href="home.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <p> 
-    I dream of a world where the right thing to do is the easy thing to do.
-  </p>  
   <ul>
     
-<li><span class="date">2022 May 07 - </span><a href="./logo">Hello world! (first post)</a><span class="description">, TO be or not to be</span></li>
+<li><span><a href="https://smh.bio/tally.html">Tally</a><span class="description">, a habit tracker.</span></span><span class="date">May 17, 2021</span></li>
+
+
+<li><span><a href="https://smh.bio/asone.html">AsOne</a><span class="description">, a massively collaborative research platform.</span></span><span class="date">May 28, 2020</span></li>
+
+
+<li><span><a href="https://smh.bio/hachi.html">Hachi</a><span class="description">, a DNA data storage simulation</span></span><span class="date">Jul 08, 2018</span></li>
 
   </ul>
 </body>
