--- a/public/index.html
+++ b/public/index.html
@@ -6,13 +6,13 @@
 <body>
   <ul>
     
-<li><span><a href="https://smh.bio/tally.html">Tally</a><span class="description">, a habit tracker.</span></span><span class="date">May 17, 2021</span></li>
+<li><span><a href="tally.html">Tally</a><span class="description">, a habit tracker.</span></span><span class="date">May 17, 2021</span></li>
 
 
-<li><span><a href="https://smh.bio/asone.html">AsOne</a><span class="description">, a massively collaborative research platform.</span></span><span class="date">May 28, 2020</span></li>
+<li><span><a href="asone.html">AsOne</a><span class="description">, a massively collaborative research platform.</span></span><span class="date">May 28, 2020</span></li>
 
 
-<li><span><a href="https://smh.bio/hachi.html">Hachi</a><span class="description">, a DNA data storage simulation</span></span><span class="date">Jul 08, 2018</span></li>
+<li><span><a href="hachi.html">Hachi</a><span class="description">, a DNA data storage simulation</span></span><span class="date">Jul 08, 2018</span></li>
 
   </ul>
 </body>
