--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,14 @@
 
+<!DOCTYPE html>
+<html lang="en">
 <head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="author" content="smh">
   <title>smh.bio</title>
   <link rel="stylesheet" href="styles.css">
+  <link rel="icon" href="16x16.ico" type"image/ico" sizes="16x16">
+  <link rel="icon" href="32x32.ico" type"image/ico" sizes="16x16">
 </head>
 <body>
   <ul>
@@ -16,3 +23,4 @@
 
   </ul>
 </body>
+</html>
