refactor biography, works with general print

--- a/public/index.html
+++ b/public/index.html
@@ -5,22 +5,29 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="author" content="smh">
-  <title>smh.bio</title>
+  <title>smh</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="icon" href="16x16.ico" type"image/ico" sizes="16x16">
   <link rel="icon" href="32x32.ico" type"image/ico" sizes="16x16">
 </head>
 <body>
-  <ul>
-    
+  <main>
+
+<ul>
+
 <li><span><a href="tally.html">Tally</a><span class="description">, a habit tracker.</span></span><span class="date">May 17, 2021</span></li>
 
 
 <li><span><a href="asone.html">AsOne</a><span class="description">, a massively collaborative research platform.</span></span><span class="date">May 28, 2020</span></li>
 
 
-<li><span><a href="hachi.html">Hachi</a><span class="description">, a DNA data storage simulation</span></span><span class="date">Jul 08, 2018</span></li>
+<li><span><a href="yolo.html">AsOne</a><span class="description">, a massively collaborative research platform.</span></span><span class="date">May 28, 2020</span></li>
 
-  </ul>
+
+<li><span><a href="hachi.html">Hachi</a><span class="description">, a DNA data storage simulation</span></span><span class="date">Jul 08, 2018</span></li>
+    
+</ul>
+
+  </main>
 </body>
 </html>
