--- a/public/yolo.html
+++ b/public/yolo.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="author" content="smh">
-  <title>asone</title>
+  <title>yolo</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="icon" href="16x16.ico" type"image/ico" sizes="16x16">
   <link rel="icon" href="32x32.ico" type"image/ico" sizes="16x16">
