--- a/public/asone.html
+++ b/public/asone.html
@@ -13,6 +13,7 @@
 <body>
   <main>
 <p><a href="https://asone.ai">Asone</a> is a startup I co-founded with my friends. Innovation is usually the result of small, cumulative contributions by various people, rather than a  giant leap by any single individual; smaller cubes forming larger ones. This insight was an inspiration  for AsOne, a platform for massively collaborative research where anyone can contribute ideas regardless of  academic background.</p>
+<picture><img src=images/logo.png></picture>
   </main>
 </body>
 </html>
