parsing select pages only puts them in home

--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,9 @@
 
 <ul>
 
+<li><span><a href="biography.html">Biography</a><span class="description">, a static site generator.</span></span><span class="date">May 17, 2022</span></li>
+
+
 <li><span><a href="tally.html">Tally</a><span class="description">, a habit tracker.</span></span><span class="date">May 17, 2021</span></li>
 
 
