changes to tally page, biography page

--- a/public/biography.html
+++ b/public/biography.html
@@ -12,9 +12,9 @@
 </head>
 <body>
   <main>
-<p><a href="https://github.com/sm-hwang/biography">Biography</a> is the static site generator for this site. I plan on posting my life's work here; I plan on my site becoming  something akin to a biography.</p>
+<p><a href="https://github.com/sm-hwang/biography">Biography</a> is the static site generator for this site. I plan on my site becoming something akin to a biography by posting my life's  work here.</p>
 <p>Biography parses a custom templating format based on  <a href="https://wiki.xxiivv.com/site/runic.html">runic</a>:</p>
-<pre><code> ! code block
+<pre><code>! code block
 > blockquote
 # header
 % comment
@@ -23,10 +23,9 @@
 & paragraph
 & `inline code`
 & [text][link]</code></pre>
-<p>Runic files are stored in the <code>page</code> directory. To parse all <code>.runic</code> files to  <code>html</code>, run</p>
+<p>Runic files are stored in the <code>page</code> directory. To parse all <code>runic</code> files to  <code>html</code>, run</p>
 <pre><code> python3 bio.py print</code></pre>
-<p>only parses the given files.</p>
-<p>To clear all current <code>.html</code> files, run</p>
+<p>To clear all current <code>html</code> files, run</p>
 <pre><code> python3 bio.py burn</code></pre>
   </main>
 </body>
