--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
   <main>
 
 <ul>
+<li><a href="shawshank.html">My favourite scene in Shawshank Redemption</a><span class="date">Jun 25, 2022</span></li>
 
 <li><span><a href="biography.html">Biography</a><span class="description">, a static site generator.</span></span><span class="date">May 17, 2022</span></li>
 
