--- a/public/biography.html
+++ b/public/biography.html
@@ -12,14 +12,14 @@
 </head>
 <body>
   <main>
-<p><a href="https://github.com/sm-hwang/biography">Biography</a> is the static site generator for this site. I plan on my site becoming something akin to a biography by posting my life's  work here.</p>
+<p><a href="https://github.com/sm-hwang/biography">Biography</a> is the static site generator for this site. I plan on my site becoming something akin to a biography by posting my life's work here.</p>
 <p>Biography parses a custom templating format based on  <a href="https://wiki.xxiivv.com/site/runic.html">runic</a>:</p>
 <pre><code>! code block
 > blockquote
 # header
 % comment
 & paragraph
-| image
+| image | background-color
 & paragraph
 & `inline code`
 & [text][link]</code></pre>
