--- a/public/asone.html
+++ b/public/asone.html
@@ -13,7 +13,7 @@
 <body>
   <main>
 <div class="center"><picture><img style="background-color: #EEEDED;" src=images/asone-logo-light.png ></picture></div>
-<p><a href="https://asone.ai">Asone</a> is a startup I co-founded with my friends. Innovation is usually the result of small, cumulative contributions by various people, rather than a  giant leap by any single individual; smaller cubes forming larger ones. This insight was an inspiration  for AsOne, a platform for massively collaborative research where anyone can contribute ideas regardless of  academic background.</p>
+<p><a href="https://asone.ai">Asone</a> is a startup I joined as a co-founded. Innovation is usually the result of small, cumulative contributions by various people, rather than a  giant leap by any single individual; smaller cubes forming larger ones. This insight was an inspiration  for AsOne, a platform for massively collaborative research where anyone can contribute ideas regardless of  academic background.</p>
   </main>
 </body>
 </html>
