Publish 'On moving'

--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
   <main>
 
 <ul>
+<li><a href="onmoving.html">On moving</a><span class="date">Mar 14, 2023</span></li>
 <li><a href="whiterose.html">Whiterose, the Garden</a><span class="date">Sep 05, 2022</span></li>
 <li><a href="shawshank.html">My favourite scene in Shawshank Redemption</a><span class="date">Jun 25, 2022</span></li>
 
