--- a/public/eulogyforthegroupridehome.html
+++ b/public/eulogyforthegroupridehome.html
@@ -12,8 +12,8 @@
 </head>
 <body>
   <main>
-<p>The best part of a group gathering in the evening was the ride home;  one friend would usually drop off a car full of people. I found the  wistfulness of the night's end, of departing from company, drew out the best conversations. The group was small enough that a singular dialogue takes place with no fragmentation, fostering a sense of togetherness.  When there was no conversation, the dimly lit backdrop of the car where  the only real sources of light are bulidings and street lamps, assuages what could've been an awkward silence during the day into a moment of  calm, and being present.</p>
-<p>As we grew older, our paths diverged; we went to different schools,  studied different subjects, dimishing the regularity of our shared  experiences. As we grew older, more and more people started driving and bringing their own cars; four or five people became two. What once was a lively denoument to the night, became a moment of transport to our separate homes.</p>
+<p>The best part of a group gathering in the evening was the ride home;  one friend would usually drop off a car full of people. I found the  wistfulness of the night's end, of departing from company, drew out the best conversations. The group is small enough that a singular dialogue takes place with no fragmentation, fostering a sense of togetherness.  When there is no conversation, the dimly lit backdrop of the car where  the only real sources of light are buildings and street lamps, assuages what could've been an awkward silence during the day into a moment of  calm, and being present.</p>
+<p>As we grew older, our paths diverged; we went to different schools,  studied different subjects, diminishing the regularity of our shared  experiences. As we grew older, more and more people started driving and bringing their own cars; four or five people became two. What once was a lively denoument to the night, became a moment of transport to our separate homes.</p>
   </main>
 </body>
 </html>
