--- a/public/index.html
+++ b/public/index.html
@@ -13,22 +13,23 @@
 <body>
   <main>
 
-<ul>
-<li><a href="eulogyforthegroupridehome.html">Eulogy for the Group Ride Home</a><span class="date">Jul 08, 2023</span></li>
-<li><a href="onmoving.html">On moving</a><span class="date">Mar 14, 2023</span></li>
-<li><a href="whiterose.html">Whiterose, the Garden</a><span class="date">Sep 05, 2022</span></li>
-<li><a href="shawshank.html">My favourite scene in Shawshank Redemption</a><span class="date">Jun 25, 2022</span></li>
+<ul class="cover">
+    <li class="chapter"><a href="minimalsetofrationals.html">Minimal set of rationals</a><span class="date">Aug 08, 2023</span></li>
+<li class="chapter"><a href="eulogyforthegroupridehome.html">Eulogy for the Group Ride Home</a><span class="date">Jul 08, 2023</span></li>
+<li class="chapter"><a href="onmoving.html">On moving</a><span class="date">Mar 14, 2023</span></li>
+<li class="chapter"><a href="whiterose.html">Whiterose, the Garden</a><span class="date">Sep 05, 2022</span></li>
+<li class="chapter"><a href="shawshank.html">My favourite scene in Shawshank Redemption</a><span class="date">Jun 25, 2022</span></li>
 
-<li><span><a href="biography.html">Biography</a><span class="description">, a static site generator.</span></span><span class="date">May 17, 2022</span></li>
-
-
-<li><span><a href="tally.html">Tally</a><span class="description">, a habit tracker.</span></span><span class="date">May 17, 2021</span></li>
+<li class="chapter"><span><a href="biography.html">Biography</a><span class="description">, a static site generator.</span></span><span class="date">May 17, 2022</span></li>
 
 
-<li><span><a href="asone.html">AsOne</a><span class="description">, a massively collaborative research platform.</span></span><span class="date">May 28, 2020</span></li>
+<li class="chapter"><span><a href="tally.html">Tally</a><span class="description">, a habit tracker.</span></span><span class="date">May 17, 2021</span></li>
 
 
-<li><span><a href="hachi.html">Hachi</a><span class="description">, a DNA data storage simulation</span></span><span class="date">Jul 08, 2018</span></li>
+<li class="chapter"><span><a href="asone.html">AsOne</a><span class="description">, a massively collaborative research platform.</span></span><span class="date">May 28, 2020</span></li>
+
+
+<li class="chapter"><span><a href="hachi.html">Hachi</a><span class="description">, a DNA data storage simulation</span></span><span class="date">Jul 08, 2018</span></li>
     
 </ul>
 
