--- a/public/index.html
+++ b/public/index.html
@@ -14,8 +14,9 @@
   <main>
 
 <ul class="cover">
-    <li class="chapter"><a href="minimalsetofrationals.html">Minimal set of rationals</a><span class="date">Aug 08, 2023</span></li>
-<li class="chapter"><a href="eulogyforthegroupridehome.html">Eulogy for the Group Ride Home</a><span class="date">Jul 08, 2023</span></li>
+    <li class="chapter"><a href="forthosewithoutthetimetomeditate.html">For those without the time to meditate</a><span class="date">Aug 09, 2023</span></li>
+<li class="chapter"><a href="minimalsetofreasons.html">Minimal set of reasons</a><span class="date">Aug 08, 2023</span></li>
+<li class="chapter"><a href="eulogyforthegroupridehome.html">Eulogy for the group ride home</a><span class="date">Jul 08, 2023</span></li>
 <li class="chapter"><a href="onmoving.html">On moving</a><span class="date">Mar 14, 2023</span></li>
 <li class="chapter"><a href="whiterose.html">Whiterose, the Garden</a><span class="date">Sep 05, 2022</span></li>
 <li class="chapter"><a href="shawshank.html">My favourite scene in Shawshank Redemption</a><span class="date">Jun 25, 2022</span></li>
