--- a/public/minimalsetofreasons.html
+++ b/public/minimalsetofreasons.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="author" content="smh">
-  <title>minimalsetofrationals</title>
+  <title>minimalsetofreasons</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="icon" href="16x16.ico" type"image/ico" sizes="16x16">
   <link rel="icon" href="32x32.ico" type"image/ico" sizes="16x16">
@@ -20,7 +20,7 @@
 </ol>
 
 <p>How important are each of these factors? Due to potential health consequences,  I would still remove plastic containers even if it was 100% recyclable, but  would I do it even if it was provably safe? In other words, is (2) a sufficient  reason for me to phase out plastic containers? Given that I knew (2) before (1)  and still used plastic containers, the answer seems to be no; so why did I state  (2)? Note that I wasn't in an empty vacuum reflecting on my intentions; I was  imagining myself explaining my decision in a social context; I was disingenuously virtue signalling.</p>
-<p>To live an honest life, I need to find and state only the minimal set of  rationals for an action. This is a <a href="https://en.wikipedia.org/wiki/Maximal_and_minimal_elements">concept</a> I'm borrowing from discrete  math; with respect to a mathematical property, a set is minimal if it satisfies  the property, and no proper subset of the set satisfies the property. In my case,  the property is "sufficient reasons to abandon plastic containers", and the set  {(1), (2)} is not minimal since {(1)} also meets the property, and is a subset of  {(1), (2)}. Less formally, the test I was performing above (of discarding certain  reasons and seeing if it was sufficient) is an intuitive way to check minimality.</p>
+<p>To live an honest life, I need to find and state only the minimal set of  reasons for an action. This is a <a href="https://en.wikipedia.org/wiki/Maximal_and_minimal_elements">concept</a> I'm borrowing from discrete  math; with respect to a mathematical property, a set is minimal if it satisfies  the property, and no proper subset of the set satisfies the property. In my case,  the property is "sufficient reasons to abandon plastic containers", and the set  {(1), (2)} is not minimal since {(1)} also meets the property, and is a subset of  {(1), (2)}. Less formally, the test I was performing above (of discarding certain  reasons and seeing if it was sufficient) is an intuitive way to check minimality.</p>
   </main>
 </body>
 </html>
