Publish 'Complexities of life in three stories'

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,8 @@
   <main>
 
 <ul class="cover">
-    <li class="chapter"><a href="thedevilinyourear.html">The devil in your ear</a><span class="date">May 08, 2024</span></li>
+    <li class="chapter"><a href="complexitiesoflifeinthreestories.html">Complexities of life in three stories</a><span class="date">Oct 05, 2024</span></li>
+<li class="chapter"><a href="thedevilinyourear.html">The devil in your ear</a><span class="date">May 08, 2024</span></li>
 <li class="chapter"><a href="forthosewithoutthetimetomeditate.html">For those without the time to meditate</a><span class="date">Aug 09, 2023</span></li>
 <li class="chapter"><a href="minimalsetofreasons.html">Minimal set of reasons</a><span class="date">Aug 08, 2023</span></li>
 <li class="chapter"><a href="eulogyforthegroupridehome.html">Eulogy for the group ride home</a><span class="date">Jul 08, 2023</span></li>
