Use Markdown instead of runic, and support latex. Publish Embracing boring technology: update on Biography

--- a/public/biography.html
+++ b/public/biography.html
@@ -9,24 +9,34 @@
   <link rel="stylesheet" href="styles.css">
   <link rel="icon" href="16x16.ico" type"image/ico" sizes="16x16">
   <link rel="icon" href="32x32.ico" type"image/ico" sizes="16x16">
+  <script src="mathjax_config.js" defer></script>
+  <script type="text/javascript" id="MathJax-script" defer
+    src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
+  </script>
 </head>
 <body>
   <main>
-<p><a href="https://github.com/sm-hwang/biography">Biography</a> is the static site generator for this site. I plan on my site becoming something akin to a biography by posting my life's work here.</p>
-<p>Biography parses a custom templating format based on  <a href="https://wiki.xxiivv.com/site/runic.html">runic</a>:</p>
+<p><a href="https://github.com/sm-hwang/biography">Biography</a> is the static site generator for
+this site. I plan on my site becoming something akin to a biography by posting my life's work here.</p>
+<p>Biography parses a custom templating format based on 
+<a href="https://wiki.xxiivv.com/site/runic.html">runic</a>:</p>
 <pre><code>! code block
-> blockquote
+&gt; blockquote
 # header
 % comment
-& paragraph
+&amp; paragraph
 | image | background-color
-& paragraph
-& `inline code`
-& [text][link]</code></pre>
-<p>Runic files are stored in the <code>page</code> directory. To parse all <code>runic</code> files to  <code>html</code>, run</p>
-<pre><code> python3 bio.py print</code></pre>
+&amp; paragraph
+&amp; `inline code`
+&amp; [text][link]
+</code></pre>
+<p>Runic files are stored in the <code>page</code> directory. To parse all <code>runic</code> files to 
+<code>html</code>, run</p>
+<pre><code>python3 bio.py print
+</code></pre>
 <p>To clear all current <code>html</code> files, run</p>
-<pre><code> python3 bio.py burn</code></pre>
+<pre><code>python3 bio.py burn
+</code></pre>
   </main>
 </body>
 </html>
