--- a/public/forthosewithoutthetimetomeditate.html
+++ b/public/forthosewithoutthetimetomeditate.html
@@ -9,11 +9,19 @@
   <link rel="stylesheet" href="styles.css">
   <link rel="icon" href="16x16.ico" type"image/ico" sizes="16x16">
   <link rel="icon" href="32x32.ico" type"image/ico" sizes="16x16">
+  <script src="mathjax_config.js" defer></script>
+  <script type="text/javascript" id="MathJax-script" defer
+    src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
+  </script>
 </head>
 <body>
   <main>
-<p>I used to think time spent doing chores was waste time; time when I wasn't doing something productive. As a result, I would cram music, youtube videos,  and other auditory or visual media in parallel.</p>
-<p>Now I've realized that every chore is an opportunity to meditate. To hone in on a singular activity, and embrace "boredom"; to "<a href="https://www.imdb.com/title/tt9788510/characters/nm0724656">extract simple pleasure from the execution of a task well done</a>".</p>
+<p>I used to think time spent doing chores was waste time; time when I wasn't
+doing something productive. As a result, I would cram music, youtube videos, 
+and other auditory or visual media in parallel.</p>
+<p>Now I've realized that every chore is an opportunity to meditate. To hone in
+on a singular activity, and embrace "boredom"; to "<a href="https://www.imdb.com/title/tt9788510/characters/nm0724656">extract simple pleasure
+from the execution of a task well done</a>".</p>
   </main>
 </body>
 </html>
