--- a/public/index.html
+++ b/public/index.html
@@ -9,12 +9,17 @@
   <link rel="stylesheet" href="styles.css">
   <link rel="icon" href="16x16.ico" type"image/ico" sizes="16x16">
   <link rel="icon" href="32x32.ico" type"image/ico" sizes="16x16">
+  <script src="mathjax_config.js" defer></script>
+  <script type="text/javascript" id="MathJax-script" defer
+    src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
+  </script>
 </head>
 <body>
   <main>
 
 <ul class="cover">
-    <li class="chapter"><a href="complexitiesoflifeinthreestories.html">Complexities of life in three stories</a><span class="date">Oct 05, 2024</span></li>
+    <li class="chapter"><a href="biography2.html">Embracing boring technology: updates to biography</a><span class="date">Feb 23, 2025</span></li>
+<li class="chapter"><a href="complexitiesoflifeinthreestories.html">Complexities of life in three stories</a><span class="date">Oct 05, 2024</span></li>
 <li class="chapter"><a href="thedevilinyourear.html">The devil in your ear</a><span class="date">May 08, 2024</span></li>
 <li class="chapter"><a href="forthosewithoutthetimetomeditate.html">For those without the time to meditate</a><span class="date">Aug 09, 2023</span></li>
 <li class="chapter"><a href="minimalsetofreasons.html">Minimal set of reasons</a><span class="date">Aug 08, 2023</span></li>
