--- a/public/onmoving.html
+++ b/public/onmoving.html
@@ -9,15 +9,39 @@
   <link rel="stylesheet" href="styles.css">
   <link rel="icon" href="16x16.ico" type"image/ico" sizes="16x16">
   <link rel="icon" href="32x32.ico" type"image/ico" sizes="16x16">
+  <script src="mathjax_config.js" defer></script>
+  <script type="text/javascript" id="MathJax-script" defer
+    src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
+  </script>
 </head>
 <body>
   <main>
-<div class="center"><picture><img style="background-color: #000000;" src=images/cityinthenight.png ></picture></div>
-<p>I've always loved this <a href="https://imgur.com/F5KyVyD">artwork</a>. I found it as a  background image of  a video of an <a href="https://www.youtube.com/watch?v=PrqyYaFNlZ8">original composition</a>  around six years ago. Although I was a  fan of the musician's work, I loved the artwork more than the composition, even  on first watch.</p>
-<p>What I love are the dualities present. The cityscape in the backdrop of a dark room to me seems like the unknown, the external, something currently out of reach. Two opposite flavours are presented: the orange hued city skyline fills me with a sense of wonder and curiosity, congruent  with the boy looking outwards, while the blue tinted city is cold and  unwelcoming, the fear of the unknown. The pitch black darkness of the room can be isolating and gloomy, but to me its soothing: the light from the city shines so much brighter, accentuating what the unknown can  offer.</p>
-<p>I was reminded of the artwork while strolling through my neighbourhood  tonight. The neighbourhood is slightly elevated, and I could see the  outline of the city in its orange glow.</p>
-<p>I've lived in this neighbourhood for fourteen years, and I'm about to  move on. Packing my things enveloped me with old memories and nostalgia; I'm reminded that this is the start of a new journey, but also an end to my life here. I'll miss  this place; I won't forget my youth here.</p>
-<p>What awaits me at my new destination? Will I approach it with a fear of the unknown, or with wondrous new curiosity?</p>
+<div class="center"><picture><img alt="cityinthenight.png" src="images/cityinthenight.png" style="background-color: #000000;" /></picture></div>
+<p>I've always loved this <a href="https://imgur.com/F5KyVyD">artwork</a>. I found it as a 
+background image of 
+a video of an <a href="https://www.youtube.com/watch?v=PrqyYaFNlZ8">original composition</a> 
+around six years ago. Although I was a 
+fan of the musician's work, I loved the artwork more than the composition, even 
+on first watch.</p>
+<p>What I love are the dualities present. The cityscape
+in the backdrop of a dark room to me seems like the unknown, the external, something
+currently out of reach. Two opposite flavours are presented: the orange hued city
+skyline fills me with a sense of wonder and curiosity, congruent  with
+the boy looking outwards, while the blue tinted city is cold and 
+unwelcoming, the fear of the unknown. The pitch
+black darkness of the room can be isolating and gloomy, but to me its soothing:
+the light from the city shines so much brighter, accentuating what the unknown can 
+offer.</p>
+<p>I was reminded of the artwork while strolling through my neighbourhood 
+tonight. The neighbourhood is slightly elevated, and I could see the 
+outline of the city in its orange glow.</p>
+<p>I've lived in this neighbourhood for fourteen years, and I'm about to 
+move on. Packing my things enveloped me with
+old memories and nostalgia; I'm reminded
+that this is the start of a new journey, but also an end to my life here. I'll miss 
+this place; I won't forget my youth here.</p>
+<p>What awaits me at my new destination? Will I approach it with a fear
+of the unknown, or with wondrous new curiosity?</p>
   </main>
 </body>
 </html>
