--- a/public/whiterose.html
+++ b/public/whiterose.html
@@ -9,14 +9,32 @@
   <link rel="stylesheet" href="styles.css">
   <link rel="icon" href="16x16.ico" type"image/ico" sizes="16x16">
   <link rel="icon" href="32x32.ico" type"image/ico" sizes="16x16">
+  <script src="mathjax_config.js" defer></script>
+  <script type="text/javascript" id="MathJax-script" defer
+    src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
+  </script>
 </head>
 <body>
   <main>
-<div class="center"><picture><img style="background-color: #222222;" src=images/whiterose-logo.png ></picture></div>
-<blockquote><p>You hack people, I hack time.</p></blockquote>
-<p>This image was supposed to be the logo for a time tracking application I had in mind. I never ended up starting the project for one reason or another, but liked the logo enough that I've adopted it for personal use.</p>
-<p>Since creating the logo, I've realized that my passion for technology is to enable people to reach their full potential, to aid in the crusade against  <a href="https://stevenpressfield.com/books/the-war-of-art/">Resistance</a>. I've also been inspired by the likes of  <a href="https://wiki.xxiivv.com/site/home.html">Devine</a> and  <a href="https://webring.xxiivv.com/">others</a> to create my own tools.</p>
-<p><a href="https://github.com/Whiterose-the-Garden">Whiterose, the Garden</a> will  be an ecosystem of keyboard driven, minimalistic productivity tools (see <a href="https://github.com/Whiterose-the-Garden/tally-electron">Tally</a> for an example). I will design the tools primarily for my own use, but I have full confidence that others will find it  useful as well.</p>
+<div class="center"><picture><img alt="whiterose-logo.png" src="images/whiterose-logo.png" style="background-color: #222222;" /></picture></div>
+<blockquote>
+<p>You hack people, I hack time.</p>
+</blockquote>
+<p>This image was supposed to be the logo for a time tracking application
+I had in mind. I never ended up starting the project for one reason or another,
+but liked the logo enough that I've adopted it for personal use.</p>
+<p>Since creating the logo, I've realized that my passion for technology is to
+enable people to reach their full potential, to aid in the crusade against 
+<a href="https://stevenpressfield.com/books/the-war-of-art/">Resistance</a>.
+I've also been inspired by the likes of 
+<a href="https://wiki.xxiivv.com/site/home.html">Devine</a> and 
+<a href="https://webring.xxiivv.com/">others</a> to create my own tools.</p>
+<p><a href="https://github.com/Whiterose-the-Garden">Whiterose, the Garden</a> will 
+be an ecosystem of keyboard driven, minimalistic productivity tools (see
+<a href="https://github.com/Whiterose-the-Garden/tally-electron">Tally</a> for
+an example). I will design the tools primarily
+for my own use, but I have full confidence that others will find it 
+useful as well.</p>
   </main>
 </body>
 </html>
