--- a/public/asone.html
+++ b/public/asone.html
@@ -9,11 +9,19 @@
   <link rel="stylesheet" href="styles.css">
   <link rel="icon" href="16x16.ico" type"image/ico" sizes="16x16">
   <link rel="icon" href="32x32.ico" type"image/ico" sizes="16x16">
+  <script src="mathjax_config.js" defer></script>
+  <script type="text/javascript" id="MathJax-script" defer
+    src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
+  </script>
 </head>
 <body>
   <main>
-<div class="center"><picture><img style="background-color: #EEEDED;" src=images/asone-logo-light.png ></picture></div>
-<p><a href="https://asone.ai">Asone</a> is a startup I joined as a co-founded. Innovation is usually the result of small, cumulative contributions by various people, rather than a  giant leap by any single individual; smaller cubes forming larger ones. This insight was an inspiration  for AsOne, a platform for massively collaborative research where anyone can contribute ideas regardless of  academic background.</p>
+<div class="center"><picture><img alt="asone-logo-light.png" src="images/asone-logo-light.png" style="background-color: #EEEDED;" /></picture></div>
+<p><a href="https://asone.ai">Asone</a> is a startup I joined as a co-founded.
+Innovation is usually the result of small, cumulative contributions by various people, rather than a 
+giant leap by any single individual; smaller cubes forming larger ones. This insight was an inspiration 
+for AsOne, a platform for massively collaborative research where anyone can contribute ideas regardless of 
+academic background.</p>
   </main>
 </body>
 </html>
