--- a/public/hachi.html
+++ b/public/hachi.html
@@ -9,12 +9,26 @@
   <link rel="stylesheet" href="styles.css">
   <link rel="icon" href="16x16.ico" type"image/ico" sizes="16x16">
   <link rel="icon" href="32x32.ico" type"image/ico" sizes="16x16">
+  <script src="mathjax_config.js" defer></script>
+  <script type="text/javascript" id="MathJax-script" defer
+    src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
+  </script>
 </head>
 <body>
   <main>
-<p><a href="https://github.com/sm-hwang/hachi">Hachi</a> is a research project I did through the PURE Award in my second year. Having a background in both biology and computer  science, I was interested in the feasibility of storing digital data in DNA. Using  (at the time) a novel encoding algorithm called the <a href="https://www.science.org/doi/10.1126/science.aaj2038#:~:text=DNA%20has%20the%20potential%20to,for%20information%20stored%20per%20nucleotide.">DNA Fountain algorithm</a>, I simulated the process of  encoding data using <a href="https://en.wikipedia.org/wiki/Hachimoji_DNA">Hachimoji DNA</a>, which appends four additional synthetic nucleotides to the genetic alphabet.</p>
-<p>The program simulates the molecular processes of storing and reading the  digital data in DNA by using the reported error rates of these processes in  literature. The goal was to determine whether DNA Fountain could still decode the data even with higher error rates associated with synthetic nucleotides.</p>
-<p>This project was a failure in terms of generating useful insights about DNA digital storage, but was a healthy learning experience which paved the way for future  research endeavours.</p>
+<p><a href="https://github.com/sm-hwang/hachi">Hachi</a> is a research project I did through the
+PURE Award in my second year. Having a background in both biology and computer 
+science, I was interested in the feasibility of storing digital data in DNA. Using 
+(at the time) a novel encoding algorithm called the <a href="https://www.science.org/doi/10.1126/science.aaj2038#:~:text=DNA%20has%20the%20potential%20to,for%20information%20stored%20per%20nucleotide.">DNA Fountain algorithm</a>, I simulated the process of 
+encoding data using <a href="https://en.wikipedia.org/wiki/Hachimoji_DNA">Hachimoji DNA</a>,
+which appends four additional synthetic nucleotides to the genetic alphabet.</p>
+<p>The program simulates the molecular processes of storing and reading the 
+digital data in DNA by using the reported error rates of these processes in 
+literature. The goal was to determine whether DNA Fountain could still decode
+the data even with higher error rates associated with synthetic nucleotides.</p>
+<p>This project was a failure in terms of generating useful insights about DNA digital
+storage, but was a healthy learning experience which paved the way for future 
+research endeavours.</p>
   </main>
 </body>
 </html>
