--- a/public/tally.html
+++ b/public/tally.html
@@ -9,16 +9,27 @@
   <link rel="stylesheet" href="styles.css">
   <link rel="icon" href="16x16.ico" type"image/ico" sizes="16x16">
   <link rel="icon" href="32x32.ico" type"image/ico" sizes="16x16">
+  <script src="mathjax_config.js" defer></script>
+  <script type="text/javascript" id="MathJax-script" defer
+    src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
+  </script>
 </head>
 <body>
   <main>
-<p><a href="https://github.com/Whiterose-the-Garden/tally-electron">Tally</a> is a minimalistic, keyboard driven habit tracker made using <a href="https://www.electronjs.org/">electron</a> and <a href="https://reactjs.org/">react</a>.</p>
-<p>Tally is modal like vim. The list of habits in <code>view</code> mode can be traversed by <code>j</code>/<code>k</code> for up/down.</p>
-<p>The <code>command</code> mode can be accessed by <code>:</code>. Use <code>esc</code> to exit back to <code>view</code> mode.</p>
+<p><a href="https://github.com/Whiterose-the-Garden/tally-electron">Tally</a> is
+a minimalistic, keyboard driven habit tracker made using <a href="https://www.electronjs.org/">electron</a>
+and <a href="https://reactjs.org/">react</a>.</p>
+<p>Tally is modal like vim. The list of habits in <code>view</code> mode can be
+traversed by <code>j</code>/<code>k</code> for up/down.</p>
+<p>The <code>command</code> mode can be accessed by <code>:</code>. Use <code>esc</code> to exit back
+to <code>view</code> mode.</p>
 <p>New habits are added by</p>
-<pre><code> :add [HABIT NAME]</code></pre>
+<pre><code>:add [HABIT NAME]
+</code></pre>
 <p>and deleted by <code>dd</code> while hovering the habit to be deleted.</p>
-<p>The project has been abanoned since I no longer have a use for habit  trackers, and the memory required by elecron (> 150mb!) for such a small project was outrageous.</p>
+<p>The project has been abanoned since I no longer have a use for habit 
+trackers, and the memory required by elecron (&gt; 150mb!) for such a small
+project was outrageous.</p>
 <p>The design is inspired by <a href="https://github.com/hundredrabbits/Orca">Orca</a> and <a href="https://github.com/nerdypepper/dijo">dijo</a>.</p>
   </main>
 </body>
